--- a/style.css
+++ b/style.css
@@ -15,6 +15,25 @@
     .nav-link:hover {
       color: #f39c12 !important;
     }
+/* Contact Button */
+    .contact-btn {
+  display: inline-block;
+  padding: 10px 25px;
+  background-color: black;
+  border: 5px solid black;
+  border-radius: 50px;
+  font-size: 16px;
+  font-weight: 500;
+  color: white;
+  text-decoration: none;   /* removes underline */
+  cursor: pointer;
+  transition: all 0.3s ease;  /* smooth hover effect */
+}
+
+.contact-btn:hover {
+  background-color: white;;
+  color: black;
+}
 
     /* Gradient Text */
     .text-gradient {
